// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shoud correctly format header 1`] = `
Array [
  Object {
    "Header": "x",
    "accessor": [Function],
    "disableSortBy": false,
    "group": undefined,
    "id": "x",
    "minWidth": 100,
    "title": undefined,
    "width": 180,
  },
  Object {
    "Header": "y",
    "accessor": [Function],
    "disableSortBy": false,
    "group": undefined,
    "id": "y",
    "minWidth": 100,
    "title": undefined,
    "width": 180,
  },
  Object {
    "Header": "z",
    "accessor": [Function],
    "disableSortBy": false,
    "group": undefined,
    "id": "z",
    "minWidth": 100,
    "title": undefined,
    "width": 180,
  },
]
`;

exports[`should correctly format multi-level header 1`] = `
Array [
  Object {
    "Header": "x",
    "accessor": [Function],
    "disableSortBy": false,
    "group": undefined,
    "id": "x",
    "minWidth": 100,
    "title": undefined,
    "width": 180,
  },
  Object {
    "Header": "a",
    "columns": Array [
      Object {
        "Header": "i",
        "accessor": [Function],
        "disableSortBy": false,
        "group": 1,
        "id": "ai",
        "minWidth": 100,
        "title": undefined,
        "width": 180,
      },
      Object {
        "Header": "j",
        "accessor": [Function],
        "disableSortBy": false,
        "group": 1,
        "id": "aj",
        "minWidth": 100,
        "title": undefined,
        "width": 180,
      },
    ],
    "id": "a",
  },
]
`;

exports[`should support explicit id and titles for columns 1`] = `
Array [
  Object {
    "Header": "X",
    "accessor": [Function],
    "disableSortBy": false,
    "group": undefined,
    "id": "column1",
    "minWidth": 100,
    "title": "X",
    "width": 180,
  },
  Object {
    "Header": "Y",
    "accessor": [Function],
    "disableSortBy": false,
    "group": undefined,
    "id": "y",
    "minWidth": 100,
    "title": undefined,
    "width": 180,
  },
  Object {
    "Header": "Z",
    "accessor": [Function],
    "disableSortBy": false,
    "group": undefined,
    "id": "column3",
    "minWidth": 100,
    "title": "Z",
    "width": 180,
  },
]
`;

exports[`should support explicit id for nested columns 1`] = `
Array [
  Object {
    "Header": "X",
    "columns": Array [
      Object {
        "Header": "i",
        "accessor": [Function],
        "disableSortBy": false,
        "group": 0,
        "id": "column1i",
        "minWidth": 100,
        "title": undefined,
        "width": 180,
      },
      Object {
        "Header": "j",
        "accessor": [Function],
        "disableSortBy": false,
        "group": 0,
        "id": "column1columnJ",
        "minWidth": 100,
        "title": undefined,
        "width": 180,
      },
    ],
    "id": "column1",
  },
  Object {
    "Header": "Y",
    "accessor": [Function],
    "disableSortBy": false,
    "group": undefined,
    "id": "y",
    "minWidth": 100,
    "title": undefined,
    "width": 180,
  },
  Object {
    "Header": "Z",
    "columns": Array [
      Object {
        "Header": "Z1",
        "accessor": [Function],
        "disableSortBy": false,
        "group": 2,
        "id": "zcolumnZ1",
        "minWidth": 100,
        "title": undefined,
        "width": 180,
      },
      Object {
        "Header": "Z2",
        "accessor": [Function],
        "disableSortBy": false,
        "group": 2,
        "id": "zZ2",
        "minWidth": 100,
        "title": undefined,
        "width": 180,
      },
    ],
    "id": "Z",
  },
]
`;
